minimal-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: minimal-ingress 
  annotations:
    annotations: {
    "fortiadc-ip" : "172.16.0.2",
    "fortiadc-admin" : "admin",
    "fortiadc-admin-pwd" : "fortinet",
    "fortiadc-vdom" : "root",
    "fortiadc-ctrl-log" : "enable",
    "virtual-server-ip" : "10.2.0.100",
    "virtual-server-interface" : "port2",
    "virtual-server-port" : "443",
    "load-balance-method" : "LB_METHOD_LEAST_CONNECTION",
    "load-balance-profile" : "LB_PROF_HTTPS"
}
spec:
 ingressClassName: fadc-ingress-controller 
 rules:
 - http:
     paths:
     - path: "/"
        pathType: Prefix 
        backend:
          service:
            name: hello-minikube
            port: 
              number: 31133
