vdom-ingress.yaml
apiVersion: networking.k8s.io/v1                                                                                                                                                                           
kind: Ingress                                                                                                                                                                                              
metadata:                                                                                                                                                                                                  
  name: vdom-ingress                                                                                                                                                                                       
  annotations: {                                                                                                                                                                                           
    "fortiadc-ip" : "172.16.0.2",                                                                                                                                                                          
    "fortiadc-admin" : "admin",                                                                                                                                                                            
    "fortiadc-admin-pwd" : "###change to real password###",                                                                                                                                                                     
    "fortiadc-vdom" : "ingress",                                                                                                                                                                           
    "fortiadc-ctrl-log" : "enable",                                                                                                                                                                        
    "virtual-server-ip" : "10.200.0.101",                                                                                                                                                                  
    "virtual-server-interface" : "vlan_100",                                                                                                                                                               
    "virtual-server-port" : "443",                                                                                                                                                                         
    "load-balance-method" : "LB_METHOD_LEAST_CONNECTION",                                                                                                                                                  
    "load-balance-profile" : "LB_PROF_HTTPS"                                                                                                                                                               
}                                                                                                                                                                                                          
spec:                                                                                                                                                                                                      
 ingressClassName: fadc-ingress-controller                                                                                                                                                                 
 rules:                                                                                                                                                                                                    
 - http:                                                                                                                                                                                                   
    paths:                                                                                                                                                                                                 
    - path: /                                                                                                                                                                                              
      pathType: Prefix                                                                                                                                                                                     
      backend:                                                                                                                                                                                             
        service:                                                                                                                                                                                           
          name: hello-minikube                                                                                                                                                                             
          port:                                                                                                                                                                                            
            number: 8080
